@@ -1,5 +1,3 @@
-#define _XOPEN_SOURCE 500
-
 #include "cexplock.h"
 
 #ifdef USE_EPICS_OSI
